--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_launcher_icons: ^0.13.1
+  gap: ^3.0.1
+  get: ^4.6.6
   google_fonts: ^6.1.0
   intl: ^0.19.0
 
